--- a/css/banner.css
+++ b/css/banner.css
@@ -7,6 +7,7 @@
     background-position: bottom;
     background-repeat: no-repeat;
     align-items: center;
+    gap: 56px;
 }
 
 .banner__container-titulo {
@@ -32,4 +33,21 @@
     font-size: 24px;
     background-color: var(--cor-fundo-botao);
     border: none;
+}
+
+.banner__imagem {
+    width: 100%;
+}
+
+@media screen and (max-width: 1280px) {
+    .banner {
+        grid-template-columns: 1fr;
+        text-align: center;
+        padding: 80px 38px;
+    }
+
+    .banner__container-titulo {
+        font-size: 61px;
+        line-height: 73.2px;
+    }
 }
