--- a/css/rodape.css
+++ b/css/rodape.css
@@ -6,7 +6,7 @@
 }
 
 .rodape__linha:last-child {
-    border-top: 1.5 solid var(--cor-destaque-secundario);
+    border-top: 1.5px solid var(--cor-destaque-secundario);
     padding-top: 32px;
     display: grid;
     grid-template-columns: repeat(2, auto);
@@ -42,7 +42,7 @@
     margin-bottom: 16px;
 }
 
-.rodape__coluna_logo_img {
+.rodape__coluna_logo img {
     width: 79.61px;
     height: 48px;
 }
@@ -63,7 +63,7 @@
     line-height: 19.2px;
 }
 
-.rodape__coluna_list a {
+.rodape__coluna_list_item a {
     color: var(--cor-texto);
     text-decoration: none;
 }
@@ -74,4 +74,42 @@
 
 .rodape__coluna_list_item:last-child {
     margin-bottom: 0;
+}
+
+@media screen and (max-width: 768px) {
+
+    .rodape__linha:first-child {
+        display: grid;
+        grid-template-areas:
+        "logo logo logo"
+        "funcionamento institucional informacoes";
+        justify-content: space-between;
+        column-gap: 88px;
+    }
+
+    .rodape__linha:first-child .rodape__coluna:nth-child(2){
+        grid-area: funcionamento;
+        margin-bottom: 24px;
+    }
+
+    .rodape__linha:first-child .rodape__coluna:nth-child(3){
+        grid-area: institucional;
+    }
+
+    .rodape__linha:first-child .rodape__coluna:nth-child(4){
+        grid-area: informacoes;
+    }
+
+    .rodape__linha:first-child .rodape__coluna_logo {
+        grid-area: logo;
+        text-align: center;
+        margin-bottom: 40px;
+        padding-bottom: 40px;
+        border-bottom: 1.5px solid var(--cor-destaque-secundario);
+    }
+
+    .rodape__linha:last-child {
+        border-top: none;
+        padding-top: 32px;
+    }
 }
